--- a/x86_64.config
+++ b/x86_64.config
@@ -108,3 +108,4 @@ CONFIG_PACKAGE_luci-app-store=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-advanced=y
 CONFIG_PACKAGE_naiveproxy=y
+CONFIG_PACKAGE_luci-app-xray=y
