--- a/x86_64.config
+++ b/x86_64.config
@@ -106,4 +106,6 @@ CONFIG_PACKAGE_luci-theme-argonn=y
 CONFIG_PACKAGE_luci-app-argonne-config=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-advanced=y
+CONFIG_PACKAGE_luci-app-xray=y
 CONFIG_PACKAGE_chinadns-ng=y
+CONFIG_PACKAGE_luci-app-autoupdate=y
